# ML-Bootcamp-Final-Projesi

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 00_setup.md  01_data_overview.md  02_baseline.md  03_feature_engineering.md  04_model_optimization.md  05_evaluation.md  06_final_pipeline.md  api_deployment.md
models/final/: selected_features.json
notebooks/modeling/: 00_EDA.ipynb  01_Baseline.ipynb  02_Feature_Engineering.ipynb  03_Model_Optimization.ipynb  04_Evaluation.ipynb  05_Final_Pipeline.ipynb
src/: app.py  config.py  inference.py  pipeline.py
src/templates/: index.html
