[project]
name = "online-shoppers-ml-service"
version = "0.1.0"
description = "Predict online shopper purchase intent with a FastAPI inference service."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.9",
    "lightgbm==4.1.0",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "pydantic==2.11.1",
    "python-multipart==0.0.6",
    "scikit-learn==1.3.2",
    "shap==0.46.0",
    "uvicorn[standard]==0.24.0",
    "jinja2==3.1.2",
    "joblib==1.3.2",
]

[dependency-groups]
dev = [
    "jupyter==1.0.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.2",
]
